antlr/src/DrawMParser.java
// Generated from DrawM.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DrawMParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, ORIGIN=2, STEP=3, DRAW=4, SCALE=5, FOR=6, T=7, FROM=8, TO=9, ROT=10, 
		COMMA=11, IS=12, SEMICO=13, WIDTH=14, COLOR=15, MUL=16, DIV=17, POWER=18, 
		ADD=19, SUB=20, PI=21, E=22, SIN=23, COS=24, TAN=25, EXP=26, LN=27, SQRT=28, 
		L_BRACKET=29, R_BRACKET=30, NUMBER=31, ID=32, CONST_ID=33, NEWLINE=34, 
		WS=35, COMMENT=36, LINE_COMMENT=37, ErrText=38;
	public static final int
		RULE_prog = 0, RULE_stats = 1, RULE_stat = 2, RULE_forStat = 3, RULE_originStat = 4, 
		RULE_scaleStat = 5, RULE_rotStat = 6, RULE_colorStat = 7, RULE_widthStat = 8, 
		RULE_assignStat = 9, RULE_expr = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stats", "stat", "forStat", "originStat", "scaleStat", "rotStat", 
			"colorStat", "widthStat", "assignStat", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'origin'", "'step'", "'draw'", "'scale'", "'for'", "'t'", 
			"'from'", "'to'", "'rot'", "','", "'is'", "';'", "'width'", "'color'", 
			"'*'", "'/'", "'^'", "'+'", "'-'", "'pi'", "'e'", "'sin'", "'cos'", "'tan'", 
			"'exp'", "'ln'", "'sqrt'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "ORIGIN", "STEP", "DRAW", "SCALE", "FOR", "T", "FROM", "TO", 
			"ROT", "COMMA", "IS", "SEMICO", "WIDTH", "COLOR", "MUL", "DIV", "POWER", 
			"ADD", "SUB", "PI", "E", "SIN", "COS", "TAN", "EXP", "LN", "SQRT", "L_BRACKET", 
			"R_BRACKET", "NUMBER", "ID", "CONST_ID", "NEWLINE", "WS", "COMMENT", 
			"LINE_COMMENT", "ErrText"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DrawM.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DrawMParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DrawMParser.EOF, 0); }
		public List<StatsContext> stats() {
			return getRuleContexts(StatsContext.class);
		}
		public StatsContext stats(int i) {
			return getRuleContext(StatsContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(DrawMParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(DrawMParser.NEWLINE, i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ORIGIN) | (1L << SCALE) | (1L << FOR) | (1L << ROT) | (1L << WIDTH) | (1L << COLOR) | (1L << ID))) != 0)) {
				{
				{
				setState(22);
				stats();
				setState(26);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(23);
					match(NEWLINE);
					}
					}
					setState(28);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatsContext extends ParserRuleContext {
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public List<TerminalNode> SEMICO() { return getTokens(DrawMParser.SEMICO); }
		public TerminalNode SEMICO(int i) {
			return getToken(DrawMParser.SEMICO, i);
		}
		public StatsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stats; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitStats(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatsContext stats() throws RecognitionException {
		StatsContext _localctx = new StatsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stats);
		try {
			setState(47);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(36);
				stat();
				setState(37);
				match(SEMICO);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(39);
				stat();
				notifyErrorListeners("Missing closing ';'");
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(42);
				stat();
				setState(43);
				match(SEMICO);
				setState(44);
				match(SEMICO);
				notifyErrorListeners("To many ';'");
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public ForStatContext forStat() {
			return getRuleContext(ForStatContext.class,0);
		}
		public OriginStatContext originStat() {
			return getRuleContext(OriginStatContext.class,0);
		}
		public WidthStatContext widthStat() {
			return getRuleContext(WidthStatContext.class,0);
		}
		public ScaleStatContext scaleStat() {
			return getRuleContext(ScaleStatContext.class,0);
		}
		public RotStatContext rotStat() {
			return getRuleContext(RotStatContext.class,0);
		}
		public ColorStatContext colorStat() {
			return getRuleContext(ColorStatContext.class,0);
		}
		public AssignStatContext assignStat() {
			return getRuleContext(AssignStatContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stat);
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				forStat();
				}
				break;
			case ORIGIN:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				originStat();
				}
				break;
			case WIDTH:
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				widthStat();
				}
				break;
			case SCALE:
				enterOuterAlt(_localctx, 4);
				{
				setState(52);
				scaleStat();
				}
				break;
			case ROT:
				enterOuterAlt(_localctx, 5);
				{
				setState(53);
				rotStat();
				}
				break;
			case COLOR:
				enterOuterAlt(_localctx, 6);
				{
				setState(54);
				colorStat();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 7);
				{
				setState(55);
				assignStat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForStatContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(DrawMParser.FOR, 0); }
		public TerminalNode T() { return getToken(DrawMParser.T, 0); }
		public TerminalNode FROM() { return getToken(DrawMParser.FROM, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode TO() { return getToken(DrawMParser.TO, 0); }
		public TerminalNode STEP() { return getToken(DrawMParser.STEP, 0); }
		public TerminalNode DRAW() { return getToken(DrawMParser.DRAW, 0); }
		public TerminalNode L_BRACKET() { return getToken(DrawMParser.L_BRACKET, 0); }
		public TerminalNode COMMA() { return getToken(DrawMParser.COMMA, 0); }
		public TerminalNode R_BRACKET() { return getToken(DrawMParser.R_BRACKET, 0); }
		public ForStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitForStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForStatContext forStat() throws RecognitionException {
		ForStatContext _localctx = new ForStatContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_forStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(FOR);
			setState(59);
			match(T);
			setState(60);
			match(FROM);
			setState(61);
			expr(0);
			setState(62);
			match(TO);
			setState(63);
			expr(0);
			setState(64);
			match(STEP);
			setState(65);
			expr(0);
			setState(66);
			match(DRAW);
			setState(67);
			match(L_BRACKET);
			setState(68);
			expr(0);
			setState(69);
			match(COMMA);
			setState(70);
			expr(0);
			setState(71);
			match(R_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OriginStatContext extends ParserRuleContext {
		public TerminalNode ORIGIN() { return getToken(DrawMParser.ORIGIN, 0); }
		public TerminalNode IS() { return getToken(DrawMParser.IS, 0); }
		public TerminalNode L_BRACKET() { return getToken(DrawMParser.L_BRACKET, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(DrawMParser.COMMA, 0); }
		public TerminalNode R_BRACKET() { return getToken(DrawMParser.R_BRACKET, 0); }
		public OriginStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_originStat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitOriginStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OriginStatContext originStat() throws RecognitionException {
		OriginStatContext _localctx = new OriginStatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_originStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(ORIGIN);
			setState(74);
			match(IS);
			setState(75);
			match(L_BRACKET);
			setState(76);
			expr(0);
			setState(77);
			match(COMMA);
			setState(78);
			expr(0);
			setState(79);
			match(R_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScaleStatContext extends ParserRuleContext {
		public TerminalNode SCALE() { return getToken(DrawMParser.SCALE, 0); }
		public TerminalNode IS() { return getToken(DrawMParser.IS, 0); }
		public TerminalNode L_BRACKET() { return getToken(DrawMParser.L_BRACKET, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(DrawMParser.COMMA, 0); }
		public TerminalNode R_BRACKET() { return getToken(DrawMParser.R_BRACKET, 0); }
		public ScaleStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scaleStat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitScaleStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScaleStatContext scaleStat() throws RecognitionException {
		ScaleStatContext _localctx = new ScaleStatContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_scaleStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(SCALE);
			setState(82);
			match(IS);
			setState(83);
			match(L_BRACKET);
			setState(84);
			expr(0);
			setState(85);
			match(COMMA);
			setState(86);
			expr(0);
			setState(87);
			match(R_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RotStatContext extends ParserRuleContext {
		public TerminalNode ROT() { return getToken(DrawMParser.ROT, 0); }
		public TerminalNode IS() { return getToken(DrawMParser.IS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public RotStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rotStat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitRotStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RotStatContext rotStat() throws RecognitionException {
		RotStatContext _localctx = new RotStatContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_rotStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(ROT);
			setState(90);
			match(IS);
			setState(91);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColorStatContext extends ParserRuleContext {
		public TerminalNode COLOR() { return getToken(DrawMParser.COLOR, 0); }
		public TerminalNode IS() { return getToken(DrawMParser.IS, 0); }
		public TerminalNode L_BRACKET() { return getToken(DrawMParser.L_BRACKET, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DrawMParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DrawMParser.COMMA, i);
		}
		public TerminalNode R_BRACKET() { return getToken(DrawMParser.R_BRACKET, 0); }
		public ColorStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_colorStat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitColorStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColorStatContext colorStat() throws RecognitionException {
		ColorStatContext _localctx = new ColorStatContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_colorStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(COLOR);
			setState(94);
			match(IS);
			setState(95);
			match(L_BRACKET);
			setState(96);
			expr(0);
			setState(97);
			match(COMMA);
			setState(98);
			expr(0);
			setState(99);
			match(COMMA);
			setState(100);
			expr(0);
			setState(101);
			match(R_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WidthStatContext extends ParserRuleContext {
		public TerminalNode WIDTH() { return getToken(DrawMParser.WIDTH, 0); }
		public TerminalNode IS() { return getToken(DrawMParser.IS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public WidthStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_widthStat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitWidthStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WidthStatContext widthStat() throws RecognitionException {
		WidthStatContext _localctx = new WidthStatContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_widthStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(WIDTH);
			setState(104);
			match(IS);
			setState(105);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStatContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DrawMParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitAssignStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignStatContext assignStat() throws RecognitionException {
		AssignStatContext _localctx = new AssignStatContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(ID);
			setState(108);
			match(T__0);
			setState(109);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FuncSinContext extends ExprContext {
		public TerminalNode SIN() { return getToken(DrawMParser.SIN, 0); }
		public TerminalNode L_BRACKET() { return getToken(DrawMParser.L_BRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(DrawMParser.R_BRACKET, 0); }
		public FuncSinContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitFuncSin(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EContext extends ExprContext {
		public TerminalNode E() { return getToken(DrawMParser.E, 0); }
		public EContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitE(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MulDivContext extends ExprContext {
		public Token op;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode MUL() { return getToken(DrawMParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(DrawMParser.DIV, 0); }
		public MulDivContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitMulDiv(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddSubContext extends ExprContext {
		public Token op;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode ADD() { return getToken(DrawMParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(DrawMParser.SUB, 0); }
		public AddSubContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitAddSub(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnarySubContext extends ExprContext {
		public TerminalNode SUB() { return getToken(DrawMParser.SUB, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public UnarySubContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitUnarySub(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncTanContext extends ExprContext {
		public TerminalNode TAN() { return getToken(DrawMParser.TAN, 0); }
		public TerminalNode L_BRACKET() { return getToken(DrawMParser.L_BRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(DrawMParser.R_BRACKET, 0); }
		public FuncTanContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitFuncTan(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PieContext extends ExprContext {
		public TerminalNode PI() { return getToken(DrawMParser.PI, 0); }
		public PieContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitPie(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncExpContext extends ExprContext {
		public TerminalNode EXP() { return getToken(DrawMParser.EXP, 0); }
		public TerminalNode L_BRACKET() { return getToken(DrawMParser.L_BRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(DrawMParser.R_BRACKET, 0); }
		public FuncExpContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitFuncExp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncLnContext extends ExprContext {
		public TerminalNode LN() { return getToken(DrawMParser.LN, 0); }
		public TerminalNode L_BRACKET() { return getToken(DrawMParser.L_BRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(DrawMParser.R_BRACKET, 0); }
		public FuncLnContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitFuncLn(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TContext extends ExprContext {
		public TerminalNode T() { return getToken(DrawMParser.T, 0); }
		public TContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitT(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumberContext extends ExprContext {
		public TerminalNode NUMBER() { return getToken(DrawMParser.NUMBER, 0); }
		public NumberContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitNumber(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncCosContext extends ExprContext {
		public TerminalNode COS() { return getToken(DrawMParser.COS, 0); }
		public TerminalNode L_BRACKET() { return getToken(DrawMParser.L_BRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(DrawMParser.R_BRACKET, 0); }
		public FuncCosContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitFuncCos(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdContext extends ExprContext {
		public TerminalNode ID() { return getToken(DrawMParser.ID, 0); }
		public IdContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncSqrtContext extends ExprContext {
		public TerminalNode SQRT() { return getToken(DrawMParser.SQRT, 0); }
		public TerminalNode L_BRACKET() { return getToken(DrawMParser.L_BRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(DrawMParser.R_BRACKET, 0); }
		public FuncSqrtContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitFuncSqrt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PowerContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode POWER() { return getToken(DrawMParser.POWER, 0); }
		public PowerContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitPower(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParenContext extends ExprContext {
		public TerminalNode L_BRACKET() { return getToken(DrawMParser.L_BRACKET, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode R_BRACKET() { return getToken(DrawMParser.R_BRACKET, 0); }
		public ParenContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DrawMVisitor ) return ((DrawMVisitor<? extends T>)visitor).visitParen(this);
			else return visitor.visitChildren(this);
		}
	}
